fix(js): 🐛  z-index bug fix (#284)

--- a/apps/website/src/style.css
+++ b/apps/website/src/style.css
@@ -740,6 +740,8 @@ input {
 
 #maps-1,
 #recents-sheet {
+  z-index: 999;
+
   width: 100%;
   max-width: -webkit-fill-available;
 
